fix: Added the correct flow to add an image

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/original_image_to_compare"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@id/main_guideline"
         app:layout_constraintEnd_toStartOf="@+id/images_videos_guideline"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,6 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/compressed_image_to_compare"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@id/main_guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/images_videos_guideline"
