--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/original_image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:contentDescription="@string/original_image_to_compare"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@id/main_guideline"
@@ -53,8 +53,8 @@
 
     <ImageView
         android:id="@+id/converted_image_View"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:contentDescription="@string/compressed_image_to_compare"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@id/main_guideline"
