--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -11,6 +11,7 @@
         android:id="@+id/original_image_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:adjustViewBounds="true"
         android:contentDescription="@string/original_image_to_compare"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@id/main_guideline"
@@ -55,6 +56,7 @@
         android:id="@+id/converted_image_View"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:adjustViewBounds="true"
         android:contentDescription="@string/compressed_image_to_compare"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@id/main_guideline"
